--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
         #     - ./data/mysql/initdb:/docker-entrypoint-initdb.d
         deploy:
             replicas: 1
-            placement:
-                constraints: [node.labels.group == db]
+            # placement:
+            #     constraints: [node.labels.group == db]
         ports:
             - 3306:3306
         environment:
@@ -26,8 +26,8 @@ services:
         #     - ./data/redis:/data
         deploy:
             replicas: 1
-            placement:
-                constraints: [node.labels.group == db]
+            # placement:
+            #     constraints: [node.labels.group == db]
         ports:
             - 6379:6379
 
@@ -36,8 +36,8 @@ services:
         hostname: mq
         deploy:
             replicas: 1
-            placement:
-                constraints: [node.labels.group == db]
+            # placement:
+            #     constraints: [node.labels.group == db]
         ports:
             - 61616:61616
             - 8161:8161
@@ -45,13 +45,14 @@ services:
     api:
         image: registry.cn-shanghai.aliyuncs.com/jext/starter_api:latest
         hostname: api
-        command: ./launch.sh
+        restart: always
+        # command: ./launch.sh
         # volumes:
         #     - ./data/file:/tmp/file
         deploy:
             replicas: 1
-            placement:
-                constraints: [node.role == manager]
+            # placement:
+            #     constraints: [node.role == manager]
         ports:
             - 8011:8011
         depends_on:
