--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,14 +60,15 @@ services:
             - cache
             - mq
 
-    # admin:
-    #     image: registry.cn-shanghai.aliyuncs.com/jext/admin:latest
-    #     command: ./launch.sh
-    #     ports:
-    #         - 8010:8010
-    #     deploy:
-    #         replicas: 1
-    #         placement:
-    #             constraints: [node.role == manager]
-    #     depends_on:
-    #         - api
+    admin:
+        image: registry.cn-shanghai.aliyuncs.com/jext/starter_admin:latest
+        hostname: admin
+        command: ./launch.sh
+        ports:
+            - 8010:8010
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.role == manager]
+        depends_on:
+            - api
