--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
-services:    
+services:
     db:
-        image: registry.cn-shanghai.aliyuncs.com/hellodock/mysql:5
         hostname: db
+        image: mysql:5
         command: --default-authentication-plugin=mysql_native_password
         # volumes:
         #     - ./data/mysql/data:/var/lib/mysql
@@ -19,8 +19,8 @@ services:
            MYSQL_ROOT_PASSWORD: root
 
     cache:
-        image: registry.cn-shanghai.aliyuncs.com/hellodock/redis:4
         hostname: cache
+        image: redis:4
         command: redis-server --appendonly yes
         # volumes:
         #     - ./data/redis:/data
@@ -32,8 +32,8 @@ services:
             - 6379:6379
 
     mq:
-        image: registry.cn-shanghai.aliyuncs.com/hellodock/activemq:latest
         hostname: mq
+        image: webcenter/activemq:latest
         deploy:
             replicas: 1
             # placement:
@@ -42,33 +42,53 @@ services:
             - 61616:61616
             - 8161:8161
 
+    log:
+        hostname: log
+        image: registry.cn-shanghai.aliyuncs.com/hellodock/logstash:7.5.2
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.labels.group == api]
+        ports:
+            - 9600:9600
+            - 9601:9601
+
+    db_admin:
+        image: adminer:latest
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.labels.group == db]
+        ports:
+            - 3006:8080
+        depends_on:
+            - db
+
     api:
-        image: registry.cn-shanghai.aliyuncs.com/jext/starter_api:latest
         hostname: api
+        image: registry.cn-shanghai.aliyuncs.com/jext/starter_api:latest
         restart: always
-        # command: ./launch.sh
         # volumes:
         #     - ./data/file:/tmp/file
         deploy:
             replicas: 1
             # placement:
-            #     constraints: [node.role == manager]
+            #     constraints: [node.role == api]
         ports:
             - 8011:8011
         depends_on:
             - db
             - cache
             - mq
+            - log
 
     admin:
         image: registry.cn-shanghai.aliyuncs.com/jext/starter_admin:latest
-        hostname: admin
-        # command: ./launch.sh
         ports:
             - 8010:8010
         deploy:
             replicas: 1
             # placement:
-            #     constraints: [node.role == manager]
+            #     constraints: [node.role == api]
         depends_on:
             - api
