--- a/base_admin/Dockerfile
+++ b/base_admin/Dockerfile
@@ -8,7 +8,7 @@ RUN apt -y install npm
 RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 
 # install node:8
-RUN npm install -g n 8.16.2 --force
+RUN npm install -g n@8.16.2
 
 RUN cnpm -v
 RUN node -v
