--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,17 @@ services:
            MYSQL_DATABASE: starter
            MYSQL_ROOT_PASSWORD: root
 
+    db_admin:
+        image: adminer:latest
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.labels.group == db]
+        ports:
+            - 3006:8080
+        depends_on:
+            - db
+
     cache:
         hostname: cache
         image: redis:4
@@ -77,18 +88,28 @@ services:
         depends_on:
             - elasticsearch
 
-    db_admin:
-        image: adminer:latest
+    grafana:
+        image: grafana/grafana:latest
         deploy:
             replicas: 1
             # placement:
-            #     constraints: [node.labels.group == db]
+            #     constraints: [node.role == api]
         ports:
-            - 3006:8080
+            - 3000:3000
+
+    prometheus:
+        image: registry.cn-shanghai.aliyuncs.com/hellodock/prometheus:latest
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.role == api]
+        ports:
+            - 9090:9090
         depends_on:
-            - db
+            - api
 
     api:
+        hostname: api
         image: registry.cn-shanghai.aliyuncs.com/jext/starter_api:latest
         # volumes:
         #     - ./data/file:/tmp/file
