--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,8 @@ services:
             - 9200:9200
             - 9300:9300
 
-    log:
-        hostname: log
+    logstash:
+        hostname: logstash
         image: registry.cn-shanghai.aliyuncs.com/hellodock/logstash:latest
         deploy:
             replicas: 1
@@ -97,6 +97,18 @@ services:
         ports:
             - 3000:3000
 
+    alertmanager:
+        hostname: alertmanager
+        image: registry.cn-shanghai.aliyuncs.com/hellodock/alertmanager:latest
+        deploy:
+            replicas: 1
+            # placement:
+            #     constraints: [node.role == api]
+        ports:
+            - 9093:9093
+        depends_on:
+            - api
+
     prometheus:
         image: registry.cn-shanghai.aliyuncs.com/hellodock/prometheus:latest
         deploy:
@@ -106,6 +118,7 @@ services:
         ports:
             - 9090:9090
         depends_on:
+            - alertmanager
             - api
 
     api:
@@ -123,7 +136,7 @@ services:
             - db
             - cache
             - mq
-            - log
+            - logstash
 
     admin:
         image: registry.cn-shanghai.aliyuncs.com/jext/starter_admin:latest
