fix error by removing unnecessary files

--- a/base_api/Dockerfile
+++ b/base_api/Dockerfile
@@ -6,12 +6,8 @@ LABEL maintainer="Jext Community, https://github.com/jextop"
 COPY ./ /code
 WORKDIR /code
 
-# package and copy files
-RUN sh mvnw package -Dmaven.test.skip=true; \
-    \
-    mv ./target/base-0.0.1-SNAPSHOT.jar /deploy
+# package to trigger mvn download dependencies
+RUN sh mvnw package -Dmaven.test.skip=true
 
-WORKDIR /deploy
-
-# delete code 
+# delete code
 RUN rm -rf /code
