run npm install to install

--- a/base_admin/Dockerfile
+++ b/base_admin/Dockerfile
@@ -2,6 +2,9 @@ FROM nginx:latest
 
 LABEL maintainer="Jext Community, https://github.com/jextop"
 
+# copy code
+COPY ./package.json /code/
+
 WORKDIR /code
 
 # install npm
@@ -10,7 +13,8 @@ RUN apt update; \
 	npm install -g cnpm --registry=https://registry.npm.taobao.org; \
 	\
 	cnpm -v; \
-	node -v
+	node -v; \
+	cnpm install
 
 WORKDIR /etc/nginx
 
