优化run命令，合并layer，减少数量和image大小

--- a/base_api/Dockerfile
+++ b/base_api/Dockerfile
@@ -7,9 +7,10 @@ COPY ./ /code
 WORKDIR /code
 
 # package to trigger mvn download dependencies
-RUN sh mvnw package -Dmaven.test.skip=true
+RUN sh mvnw package -Dmaven.test.skip=true; \
+    \
+    cd ..; \
+    rm -rf /code; \
+    ls -al
 
 WORKDIR /
-
-# delete code
-RUN rm -rf /code
