--- a/base_admin/Dockerfile
+++ b/base_admin/Dockerfile
@@ -13,11 +13,19 @@ RUN apt update; \
 	git --version; \
 	\
 	apt -y install npm; \
-	npm install -g cnpm --registry=https://registry.npm.taobao.org; \
-	\
-	cnpm -v; \
 	node -v; \
-	cnpm install
+	\
+	npm install -g cnpm --registry=https://registry.npm.taobao.org; \
+	cnpm -v; \
+	cnpm install; \
+	\
+	cnpm install -g yarn; \
+	yarn --version; \
+	yarn config set registry https://registry.npm.taobao.org -g; \
+	yarn config set sass_binary_site http://cdn.npm.taobao.org/dist/node-sass -g; \
+    \
+    cd ..; \
+    ls -al
 
 WORKDIR /etc/nginx
 
