添加DB base ，安装git工具，拉取代码库

--- a/base_admin/Dockerfile
+++ b/base_admin/Dockerfile
@@ -7,7 +7,7 @@ COPY ./package.json /code/
 
 WORKDIR /code
 
-# install npm
+# install git, npm and yarn
 RUN apt update; \
 	apt -y install git; \
 	git --version; \
