--- a/base_api/Dockerfile
+++ b/base_api/Dockerfile
@@ -4,10 +4,15 @@ LABEL maintainer="Jext Community, https://github.com/jextop"
 
 # copy code
 COPY ./ /code
+
 WORKDIR /code
 
-# package to trigger mvn download dependencies
-RUN sh mvnw package -Dmaven.test.skip=true; \
+# install git, call mvn package to trigger mvn download dependencies
+RUN apt update; \
+	apt -y install git; \
+	git --version; \
+	\
+	sh mvnw package -Dmaven.test.skip=true; \
     \
     cd ..; \
     rm -rf /code; \
